10.x build first pass

--- a/custom_builds/7/distros/10.x/pom.xml
+++ b/custom_builds/7/distros/10.x/pom.xml
@@ -63,6 +63,7 @@
                 <module>config</module>
                 <module>content</module>
                 <module>content-review</module>
+                <module>content-review/contentreview-impl</module>
                 <module>courier</module>
                 <module>dav</module>
                 <module>delegatedaccess</module>
@@ -83,9 +84,7 @@
                 <module>mailsender</module>
                 <module>memory</module>
                 <module>message</module>
-                <module>metaobj</module>
                 <module>msgcntr</module>
-                <module>osp</module>
                 <module>podcasts</module>
                 <module>polls</module>
                 <module>portal</module>
@@ -93,7 +92,6 @@
                 <module>presence</module>
                 <module>profile2</module>
                 <module>providers</module>
-                <module>reference</module>
                 <module>reset-pass</module>
                 <module>rights</module>
                 <module>roster2</module>
@@ -115,9 +113,14 @@
                 <module>userauditservice</module>
                 <module>usermembership</module>
                 <module>velocity</module>
-                <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
+
+                <module>blogwow</module>
+                <module>etudes-util</module>
+                <module>evaluation</module>
+                <module>melete</module>
+                <module>bigbluebutton-sakai/bbb-tool</module>
             </modules>
         </profile>
         <profile>
