updating pom to build sms for QNA

--- a/custom_builds/10/distros/10.x/pom.xml
+++ b/custom_builds/10/distros/10.x/pom.xml
@@ -126,7 +126,8 @@
 		<module>melete</module>
 		<module>scorm</module>
 		<module>bigbluebutton-sakai/bbb-tool</module>
-	    </modules>
+                <module>sms</module>
+            </modules>
         </profile>
         <profile>
             <id>experimental</id>
