Updating externals and pom for client 1

--- a/custom_builds/1/distros/10.x/pom.xml
+++ b/custom_builds/1/distros/10.x/pom.xml
@@ -119,6 +119,16 @@
                 <module>web</module>
                 <module>webservices</module>
                 <module>gradebook-export</module>
+                <module>blogwow</module>
+                <module>etudes-util</module>
+                <!--
+                <module>jforum</module>
+                -->
+                <module>melete</module>
+                <module>evaluation</module>
+                <module>scorm</module>
+                <module>wicket-for-scorm</module>
+                <module>content-review/contentreview-impl</module>
             </modules>
         </profile>
         <profile>
