Build BBB and use Longsight webservices backport

--- a/custom_builds/1/distros/10.x/pom.xml
+++ b/custom_builds/1/distros/10.x/pom.xml
@@ -127,6 +127,7 @@
                 <module>scorm</module>
                 <module>wicket-for-scorm</module>
                 <module>content-review/contentreview-impl</module>
+                <module>bigbluebutton-sakai/bbb-tool</module>
             </modules>
         </profile>
         <profile>
