--- a/custom_builds/14/login/login-10.x_custom/login-tool/tool/src/webapp/WEB-INF/web.xml
+++ b/custom_builds/14/login/login-10.x_custom/login-tool/tool/src/webapp/WEB-INF/web.xml
@@ -10,17 +10,6 @@
         <filter-class>org.sakaiproject.util.RequestFilter</filter-class>
     </filter>
 
-    <!-- CAS filter mapping. If you wish to use CAS then you must uncomment this section
-    and the documented one below. Do not change anything in this block. -->
-    <filter-mapping>
-        <filter-name>sakai.request</filter-name>
-        <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>FORWARD</dispatcher>
-        <dispatcher>INCLUDE</dispatcher>
-    </filter-mapping>
-
-
     <filter>
         <filter-name>sakai.request.container</filter-name>
         <filter-class>org.sakaiproject.util.RequestFilter</filter-class>
@@ -34,6 +23,23 @@
         </init-param>
     </filter>
 
+     <filter>
+         <filter-name>Spring Delegated Filter</filter-name>
+         <filter-class>org.sakaiproject.login.springframework.SafeDelegatingFilterProxy</filter-class>
+         <init-param>
+             <param-name>targetBeanName</param-name>
+             <param-value>org.springframework.security.util.FilterChainProxy</param-value>
+         </init-param>
+     </filter>
+
+     <filter-mapping>
+         <filter-name>Spring Delegated Filter</filter-name>
+         <url-pattern>/container</url-pattern>
+         <dispatcher>REQUEST</dispatcher>
+         <dispatcher>FORWARD</dispatcher>
+         <dispatcher>INCLUDE</dispatcher>
+     </filter-mapping>
+
     <filter-mapping>
         <filter-name>sakai.request</filter-name>
         <servlet-name>sakai.login</servlet-name>
@@ -46,32 +52,6 @@
         <filter-name>sakai.request.container</filter-name>
         <servlet-name>sakai.login.container</servlet-name>
         <dispatcher>REQUEST</dispatcher>
-    </filter-mapping>
-
-    <filter>
-        <filter-name>sakai.cas</filter-name>
-            <filter-class>edu.yale.its.tp.cas.client.filter.CASFilter</filter-class>
-            <init-param>
-                <param-name>edu.yale.its.tp.cas.client.filter.loginUrl</param-name>     
-                <param-value>https://logondev.pepperdine.edu/cas/login</param-value>
-            </init-param>
-            <init-param>
-               <param-name>edu.yale.its.tp.cas.client.filter.validateUrl</param-name>
-               <param-value>https://logondev.pepperdine.edu/cas/serviceValidate</param-value>
-           </init-param>
-           <init-param>
-               <param-name>edu.yale.its.tp.cas.client.filter.serverName</param-name>
-               <param-value>peppdev.longsight.com</param-value>
-           </init-param>
-           <init-param>
-               <param-name>edu.yale.its.tp.cas.client.filter.wrapRequest</param-name>
-               <param-value>true</param-value>
-           </init-param>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>sakai.cas</filter-name>
-	<url-pattern>/container</url-pattern>
     </filter-mapping>
 
     <servlet>
@@ -95,6 +75,17 @@
         <servlet-name>sakai.login.container</servlet-name>
         <url-pattern>/container/*</url-pattern>
     </servlet-mapping>
+
+
+     <servlet-mapping>
+         <servlet-name>sakai.login</servlet-name>
+         <url-pattern>/*</url-pattern>
+     </servlet-mapping>
+
+     <listener>
+         <listener-class>org.sakaiproject.login.springframework.SakaiHomeContextLoaderListener</listener-class>
+     </listener>
+
 
 	<listener>
         <listener-class>org.sakaiproject.util.ToolListener</listener-class>
