--- a/custom_builds/74/distros/2.9.x/pom.xml
+++ b/custom_builds/74/distros/2.9.x/pom.xml
@@ -131,10 +131,12 @@
             	<!-- CUSTOM TOOLS -->
 		<module>etudes-util</module>
                 <module>hierarchy</module>
-                <module>evaluation</module>
                 <module>melete</module>
+                <!-- Commentented out 2014-09-24 to get this building
+                <module>evaluation</module>
            	<module>da_evalprovider</module>
 		<module>bigbluebutton-sakai/bbb-tool</module>
+                -->
 	   </modules>
         </profile>
         <profile>
