ND-5 backport of Keitai code

--- a/custom_builds/142/calendar/2.9.x/calendar-bundles/resources/calendar.properties
+++ b/custom_builds/142/calendar/2.9.x/calendar-bundles/resources/calendar.properties
@@ -490,3 +490,9 @@ prefs_move_up=Move up
 prefs_move_down=Move down
 date_format = MMMMM dd, yyyy
 date_link_format =yyyy-MM-dd
+
+# EntityProvider properties
+calendar=Represents calendar events.
+calendar.action.site=Retrieve the calendar events for a site. The request url pattern: /direct/calendar/site/{siteId}.{format}
+calendar.action.event=Retrieve a calendar event details specified by the site id and event id. The request url pattern: /direct/calendar/event/{siteId}/{eventId}.{format}
+calendar.action.my=Retrieve all my calendar events for all of my sites. The request url pattern: /direct/calendar/my.{format}
