--- a/custom_builds/142/web/2.9.x/web-tool/tool/src/webapp/WEB-INF/web.xml
+++ b/custom_builds/142/web/2.9.x/web-tool/tool/src/webapp/WEB-INF/web.xml
@@ -187,6 +187,9 @@
     <listener>
         <listener-class>org.sakaiproject.util.ToolListener</listener-class>
     </listener>
+    <listener>
+		<listener-class>org.sakaiproject.util.ContextLoaderListener</listener-class>
+	</listener>  
 
     <!-- ${rsmart.listener.contextloaderlistener} -->
 
