--- a/custom_builds/142/content/2.9.x/content-tool/tool/pom.xml
+++ b/custom_builds/142/content/2.9.x/content-tool/tool/pom.xml
@@ -79,6 +79,24 @@
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.sakaiproject.entitybroker</groupId>
+      <artifactId>entitybroker-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.sakaiproject.entitybroker</groupId>
+      <artifactId>entitybroker-utils</artifactId>
+      <version>${sakai.entitybroker.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>0.11.6</version>
+    </dependency>
   </dependencies>
   <build>
     <resources>
