--- a/custom_builds/142/gradebook/2.9.x/app/ui/pom.xml
+++ b/custom_builds/142/gradebook/2.9.x/app/ui/pom.xml
@@ -120,6 +120,11 @@
       <groupId>org.sakaiproject.entitybroker</groupId>
       <artifactId>entitybroker-api</artifactId>
     </dependency>
+    <dependency>
+        <groupId>org.sakaiproject.entitybroker</groupId>
+        <artifactId>entitybroker-utils</artifactId>
+    </dependency>
+    
 <!-- End Sakai2 Dependencies -->
 <!-- Database dependencies used for integration testing and schema generation -->
 <!-- Please contact the gradebook development team before removing these -->
@@ -284,6 +289,11 @@
       <groupId>org.sakaiproject.jsf</groupId>
       <artifactId>jsf-spreadsheet</artifactId>
     </dependency>
+	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>0.11.4</version>
+	</dependency>         
        <dependency>
          <groupId>org.sakaiproject.portal</groupId>
          <artifactId>sakai-portal-util</artifactId>
