Updated to latest 10.x - --- Merging r311441 through r314028 into '.':

--- a/assignment/assignment-10.x_features-backport/assignment-bundles/resources/assignment.properties
+++ b/assignment/assignment-10.x_features-backport/assignment-bundles/resources/assignment.properties
@@ -406,7 +406,7 @@ stuviewsubm.assattonly = Add attachment(s), then choose the appropriate button a
 stuviewsubm.entbelo    = Enter resubmission text below
 stuviewsubm.plesub     = Please submit again with your changes.
 stuviewsubm.theassall2 = This assignment allows submissions by attaching documents only.
-stuviewsubm.theclodat  = The close date of the assignment has passed. You can no longer submit an answer.
+stuviewsubm.theclodat  = The close date of the assignment has passed. You can no longer submit to this assignment.
 stuviewsubm.youatt     = Your attached submission
 stuviewsubm.submissatt =Submission attachment(s)
 stuviewsubm.listsummary=List of attachments. Column 1: attachment link; column 2: attachment properties; column 3: link to remove attachment from list
@@ -505,6 +505,7 @@ youmust8 = You must upload an attachment
 list.show = Show
 list.itemsper = items...
 update = Update
+removeSelected = Removed Selected
 subasstudent		= Submit as Student
 alert.globalNavi	= If you choose to exit without clicking any action button at the bottom of this page, you will lose your work. Please choose one of these buttons or navigate to your chosen page and abandon your work in this page.
 viewassign		= View Assignment
