--- a/custom_builds/142/distros/10.x/pom.xml
+++ b/custom_builds/142/distros/10.x/pom.xml
@@ -121,6 +121,7 @@
                 <module>melete</module>
                 <module>kaltura</module>
                 <module>evaluation</module>
+                <module>gradebook2</module>
             </modules>
         </profile>
         <profile>
