applying irubric patch https://source.sakaiproject.org/contrib/irubric/trunk/sakai-10/patches/sakai-10.1/gradebook.diff

--- a/gradebook/gradebook-10.x_iRubric/app/business/pom.xml
+++ b/gradebook/gradebook-10.x_iRubric/app/business/pom.xml
@@ -57,6 +57,13 @@
       <groupId>org.sakaiproject.edu-services.sections</groupId>
       <artifactId>sections-api</artifactId>
     </dependency>
+<!-- ScoringService integration -->
+	<dependency>
+        <groupId>org.sakaiproject.edu-services.scoringservice</groupId>
+        <artifactId>scoring-service-api</artifactId>
+        <scope>provided</scope>
+        <version>${sakai.version}</version>
+    </dependency>
 <!-- Standalone component -->
 	<!--    <dependency>
       <groupId>org.sakaiproject.edu-services.sections</groupId>
