SEMS-70 Custom Tutorial Changes

--- a/custom_builds/19/help/help-10.x_custom/help-component/src/tutorial/Tutorial.config
+++ b/custom_builds/19/help/help-10.x_custom/help-component/src/tutorial/Tutorial.config
@@ -46,8 +46,8 @@ introToSakai_moreButton.selection=ul#topnav li.more-tab:visible
 introToSakai_moreButton.previousUrl=/direct/tutorial/introToSakai_sitenav.json
 introToSakai_moreButton.nextUrl=/direct/tutorial/introToSakai_toolMenu.json
 introToSakai_moreButton.dialog=
-introToSakai_moreButton.positionTooltip=top right
-introToSakai_moreButton.positionTarget=bottom left
+introToSakai_moreButton.positionTooltip=top center
+introToSakai_moreButton.positionTarget=bottom center
 introToSakai_moreButton.fadeout=
 
 #Tool Menu Page
@@ -80,7 +80,7 @@ introToSakai_refreshTool.fadeout=
 #Help Icon Page
 introToSakai_helpIcon.selection=.portletTitle .action a:visible:first
 introToSakai_helpIcon.previousUrl=/direct/tutorial/introToSakai_refreshTool.json
-introToSakai_helpIcon.nextUrl=/direct/tutorial/introToSakai_profileTool.json
+introToSakai_helpIcon.nextUrl=/direct/tutorial/introToSakai_logout.json
 introToSakai_helpIcon.dialog=
 introToSakai_helpIcon.positionTooltip=top right
 introToSakai_helpIcon.positionTarget=bottom left
@@ -97,7 +97,7 @@ introToSakai_profileTool.fadeout=
 
 #Logout Page
 introToSakai_logout.selection=a#loginLink1
-introToSakai_logout.previousUrl=/direct/tutorial/introToSakai_profileTool.json
+introToSakai_logout.previousUrl=/direct/tutorial/introToSakai_helpIcon.json
 introToSakai_logout.nextUrl=
 introToSakai_logout.dialog=
 introToSakai_logout.positionTooltip=top right
