--- a/custom_builds/19/help/help-10.x_custom/help-component/src/bundle/TutorialMessages.properties
+++ b/custom_builds/19/help/help-10.x_custom/help-component/src/bundle/TutorialMessages.properties
@@ -18,7 +18,7 @@ previous=Previous
 
 #Welcome Page
 introToSakai_p1.title=Welcome
-introToSakai_p1.body=This very brief tutorial presents basic information about the features and layout of Sakai.   It will run once when you first log into Sakai.  You can access this tutorial again by clicking on "Tutorial" under your login name in the upper right corner.   Detailed information about each feature can be accessed by clicking on the <img src='/library/image/silk/help.png'/> icon found throughout Sakai.\
+introToSakai_p1.body=This very brief tutorial presents basic information about the features and layout of Sakai.   It will run once when you first log into Sakai.  You can access this tutorial again by clicking on your profile icon in the upper right corner and selecting "Tutorial" in the drop down menu.   Detailed information about each feature can be accessed by clicking on the <img src='/library/image/silk/help.png'/> icon found throughout Sakai.\
 <br/><br/>\
 Sakai is a very flexible framework for organizing sites that represent courses or projects.  Sites contain tools or specific features that site managers have selected.\
  <br/><br/>\
