Adding mhcampus for this build

--- a/custom_builds/19/linktool/linktool-10.x_custom/src/webapp/WEB-INF/web.xml
+++ b/custom_builds/19/linktool/linktool-10.x_custom/src/webapp/WEB-INF/web.xml
@@ -30,15 +30,15 @@
        This is a sample tool highlighting how to add a pre-configured linktool.
        see also the rsn.linktool.pentaho.xml sample tool registration file
     -->
-    <!--
+    
     <filter-mapping>
         <filter-name>sakai.request</filter-name>
-        <servlet-name>rsn.linktool.pentaho</servlet-name>
+        <servlet-name>sakai.seminole.mhcampus</servlet-name>
         <dispatcher>REQUEST</dispatcher>
         <dispatcher>FORWARD</dispatcher>
         <dispatcher>INCLUDE</dispatcher>
     </filter-mapping>
-    -->
+  
 
 <!-- 
      need ContextLoaderListener to load applicationContext.xml, 
@@ -78,13 +78,13 @@
        This is a sample tool highlighting how to add a pre-configured linktool.
        see also the rsn.linktool.pentaho.xml sample tool registration file
     -->
-    <!--
+   
     <servlet>
-        <servlet-name>rsn.linktool.pentaho</servlet-name>
+        <servlet-name>sakai.seminole.mhcampus</servlet-name>
         <servlet-class>org.sakaiproject.tool.rutgers.LinkTool</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
-    -->
+
 
     <servlet-mapping>
         <servlet-name>sakai.rutgers.linktool</servlet-name>
