irubric https://source.sakaiproject.org/contrib/irubric/trunk/sakai-10/patches/sakai-10.1/assignment.diff

--- a/assignment/assignment-10.x_iRubric/assignment-tool/tool/pom.xml
+++ b/assignment/assignment-10.x_iRubric/assignment-tool/tool/pom.xml
@@ -65,6 +65,13 @@
             <groupId>org.sakaiproject.edu-services.gradebook</groupId>
             <artifactId>gradebook-service-api</artifactId>
         </dependency>
+        <!-- ScoringService integration -->
+        <dependency>
+            <groupId>org.sakaiproject.edu-services.scoringservice</groupId>
+            <artifactId>scoring-service-api</artifactId>
+            <version>${sakai.version}</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.sakaiproject.entitybroker</groupId>
             <artifactId>entitybroker-api</artifactId>
