--- a/assignment/assignment-10.x_iRubric/assignment-bundles/resources/assignment.properties
+++ b/assignment/assignment-10.x_iRubric/assignment-bundles/resources/assignment.properties
@@ -929,3 +929,8 @@ settings.access.selectedGroupsGoneOtherGroupsPresent = Note - The previously sel
 settings.access.selectGroups = Note - You must select at least one group.
 selected.group = Selected Group
 selected.groups = Selected Groups
+
+scoringAgent.grade=Grade with {0}
+scoringAgent.view=View with {0}
+scoringAgent.refresh=Refresh grade from {0}
+scoringAgent.refreshReminder=Grading... Click here to refresh grade
