adding irubric assignment and core

--- a/custom_builds/19/distros/10.x/pom.xml
+++ b/custom_builds/19/distros/10.x/pom.xml
@@ -53,7 +53,8 @@
                 <module>alias</module>
                 <module>announcement</module>
                 <module>archive</module>
-                <module>assignment</module>
+                <module>irubric</module>
+		<module>assignment</module>
                 <module>authz</module>
                 <module>basiclti</module>
                 <module>calendar</module>
