--- a/site-manage/site-manage-10.x_customIrubric/site-manage-tool/tool/pom.xml
+++ b/site-manage/site-manage-10.x_customIrubric/site-manage-tool/tool/pom.xml
@@ -57,6 +57,13 @@
             <groupId>org.sakaiproject.edu-services.course-management</groupId>
             <artifactId>coursemanagement-api</artifactId>
         </dependency>
+        <!-- ScoringService integration -->
+        <dependency>
+            <groupId>org.sakaiproject.edu-services.scoringservice</groupId>
+            <artifactId>scoring-service-api</artifactId>
+            <version>${sakai.version}</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.sakaiproject.mock</groupId>
             <artifactId>sakai-mock</artifactId>
@@ -116,7 +123,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
