--- a/content-review/contentreview-10.1_vericite/contentreview-federated/pom.xml
+++ b/content-review/contentreview-10.1_vericite/contentreview-federated/pom.xml
@@ -4,13 +4,13 @@
 	<name>Sakai Content Review - Federated</name>
 	<groupId>org.sakaiproject.contentreview</groupId>
 	<artifactId>content-review-impl-base-federated</artifactId>
-	<version>11-SNAPSHOT</version>
+	<version>10.1</version>
 	<packaging>pom</packaging>
 	
     <parent>
         <groupId>org.sakaiproject</groupId>
         <artifactId>master</artifactId>
-        <version>11-SNAPSHOT</version>
+        <version>10.1</version>
         <relativePath>../master/pom.xml</relativePath>
     </parent>
 
