--- a/custom_builds/130/distros/10.x/pom.xml
+++ b/custom_builds/130/distros/10.x/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -118,6 +118,8 @@
                 <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>blogwow</module>
+                <module>evaluation</module>
             </modules>
         </profile>
         <profile>
