SAM-2425 - Backport fix for numeric question tooltip

--- a/custom_builds/6/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/DeliveryMessages.properties
+++ b/custom_builds/6/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/DeliveryMessages.properties
@@ -554,3 +554,5 @@ audio_recorder_browser_plea=Your browser does not support HTML5 audio APIs and d
 #3: valid options
 please_select_from_available=Question {1} has an invalid answer, {0}. Only the following letters of the alphabet are acceptable: {3}
 duplicate_responses=Duplicate responses:
+
+additional_instructions_label=Click to see additional instructions
