--- a/custom_builds/3/distros/2.9.x/pom.xml
+++ b/custom_builds/3/distros/2.9.x/pom.xml
@@ -113,7 +113,6 @@
                 <module>presence</module>
                 <module>providers</module>
                 <module>rights</module>
-                <module>roster</module>
                 <module>rwiki</module>
                 <module>sections</module>
                 <module>site</module>
@@ -147,6 +146,7 @@
 		<module>signup</module>
 		<module>sms</module>
                 -->
+                <module>roster2</module>
 	    </modules>
         </profile>
         <profile>
