--- a/login/login-10.x_googleplus/login-tool/tool/pom.xml
+++ b/login/login-10.x_googleplus/login-tool/tool/pom.xml
@@ -17,6 +17,28 @@
   <inceptionYear>2003</inceptionYear>
   <packaging>war</packaging>
   <dependencies>
+    
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client</artifactId>
+      <version>1.18.0-rc</version>
+    </dependency>
+    <dependency>
+	  <groupId>com.google.apis</groupId>
+	  <artifactId>google-api-services-plus</artifactId>
+	  <version>v1-rev152-1.19.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.http-client</groupId>
+      <artifactId>google-http-client-jackson</artifactId>
+      <version>1.18.0-rc</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.http-client</groupId>
+      <artifactId>google-http-client-gson</artifactId>
+      <version>1.18.0-rc</version>
+    </dependency>
+  
     <dependency>
       <groupId>org.sakaiproject.kernel</groupId>
       <artifactId>sakai-kernel-util</artifactId>
