Work-in-progress for SAML logins using the LastPass Java SAML SDK

--- a/login/login-10.x_googleplus_and_saml/login-tool/tool/pom.xml
+++ b/login/login-10.x_googleplus_and_saml/login-tool/tool/pom.xml
@@ -38,6 +38,17 @@
       <artifactId>google-http-client-gson</artifactId>
       <version>1.18.0-rc</version>
     </dependency>
+<dependency>
+	<groupId>org.opensaml</groupId>
+	<artifactId>opensaml</artifactId>
+	<version>2.6.1</version>
+</dependency>
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.4</version>
+    </dependency>
+
   
     <dependency>
       <groupId>org.sakaiproject.kernel</groupId>
