--- a/login/login-10.x_googleplus_and_saml/login-tool/tool/src/webapp/WEB-INF/web.xml
+++ b/login/login-10.x_googleplus_and_saml/login-tool/tool/src/webapp/WEB-INF/web.xml
@@ -51,6 +51,7 @@
     <filter-mapping>
         <filter-name>sakai.request.container</filter-name>
         <servlet-name>sakai.login.googleplus</servlet-name>
+        <servlet-name>sakai.login.saml</servlet-name>
         <servlet-name>sakai.login.container</servlet-name>
         <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
@@ -77,6 +78,12 @@
     </servlet>
 
     <servlet>
+        <servlet-name>sakai.login.saml</servlet-name>
+        <servlet-class>org.sakaiproject.login.tool.SAMLLogin</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet>
         <servlet-name>sakai.login.googleplus</servlet-name>
         <servlet-class>org.sakaiproject.login.tool.GooglePlusLogin</servlet-class>
         <load-on-startup>1</load-on-startup>
@@ -92,6 +99,11 @@
         <servlet-class>org.sakaiproject.login.tool.ContainerLogin</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+
+    <servlet-mapping>
+        <servlet-name>sakai.login.saml</servlet-name>
+        <url-pattern>/saml/*</url-pattern>
+    </servlet-mapping>
 
 	<!-- map the Google Plus login, and then cause it to trigger authentication -->
     <servlet-mapping>
