SAK-28069 (ORE-706561) manual patch applied

--- a/custom_builds/142/site-manage/2.9.3.x/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/custom_builds/142/site-manage/2.9.3.x/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -1117,3 +1117,5 @@ GeneralActionError=There was an unexpected error rendering this view.
 =======
 # tool grouping
 tool.group.default=General
+
+import.newtool = Note: If you choose to import content from the tools marked with a +, the tools will be added to your site.
