--- a/custom_builds/10/distros/10.x/pom.xml
+++ b/custom_builds/10/distros/10.x/pom.xml
@@ -259,6 +259,7 @@
 				<module>calendar/calendar-hbm</module>
 				<module>common/archive-api</module>
 				<module>common/impl</module>
+				<module>common/import-impl</module>
 				<module>common/edu-person-api</module>
 				<module>common/manager-api</module>
 				<module>common/type-api</module>
@@ -280,10 +281,12 @@
 				<module>edu-services/sections-service/sections-impl/sakai/model</module>
 				<module>emailtemplateservice/api</module>
 				<module>entitybroker/api</module>
+				<module>entitybroker/utils</module>
 				<module>hierarchy/api</module>
 				<module>kernel/component-manager</module>
 				<module>kernel/api</module>
 				<module>kernel/kernel-util</module>
+				<module>kernel/test-harness</module>
 				<module>lessonbuilder/api</module>
 				<module>lessonbuilder/hbm</module>
 				<module>login/login-api/api</module>
@@ -326,10 +329,12 @@
 				<module>samigo/samigo-api</module>
 				<module>samigo/samigo-hibernate</module>
 				<module>samigo/samigo-services</module>
+				<module>samigo/samigo-qti</module>
 				<module>jobscheduler/scheduler-api</module>
 				<module>jobscheduler/scheduler-component-shared</module>
 				<module>jobscheduler/scheduler-events-model</module>
 				<module>search/search-api/api</module>
+				<module>search/search-util</module>
 				<module>shortenedurl/api</module>
 				<module>signup/api</module>
 				<module>site-manage/site-association-api/api</module>
