--- a/login/login-10.x-uct-saml/login-tool/tool/pom.xml
+++ b/login/login-10.x-uct-saml/login-tool/tool/pom.xml
@@ -17,6 +17,16 @@
   <inceptionYear>2003</inceptionYear>
   <packaging>war</packaging>
   <dependencies>
+  <dependency>
+    <groupId>org.opensaml</groupId>
+    <artifactId>opensaml</artifactId>
+    <version>2.6.1</version>
+  </dependency>
+  <dependency>
+    <groupId>joda-time</groupId>
+    <artifactId>joda-time</artifactId>
+    <version>2.4</version>
+  </dependency>
     <dependency>
       <groupId>org.sakaiproject.kernel</groupId>
       <artifactId>sakai-kernel-util</artifactId>
