--- a/custom_builds/78/distros/sakai-10.x/pom.xml
+++ b/custom_builds/78/distros/sakai-10.x/pom.xml
@@ -119,6 +119,11 @@
                 <module>web</module>
                 <module>webservices</module>
                 <module>gradebook-export</module>
+                <module>evaluation</module>
+                <module>blogwow</module>
+                <module>etudes-util</module>
+                <module>melete</module>
+                
             </modules>
         </profile>
         <profile>
