--- a/custom_builds/78/providers/sakai-10.x/component/pom.xml
+++ b/custom_builds/78/providers/sakai-10.x/component/pom.xml
@@ -26,6 +26,11 @@
       <groupId>org.sakaiproject</groupId>
       <artifactId>sakai-sample-provider</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.sakaiproject</groupId>
+      <artifactId>sakai-imis-provider</artifactId>
+      <version>2.9-SNAPSHOT</version>
+    </dependency>
 <!-- -->
 <!-- Needed for the JLDAP Provider
 		<dependency>
