--- a/custom_builds/78/providers/sakai-10.x/pom.xml
+++ b/custom_builds/78/providers/sakai-10.x/pom.xml
@@ -29,6 +29,8 @@
     <module>kerberos</module>
     <module>openldap</module>
     <module>sample</module>
+    <!-- module>hybrid</module -->
+    <module>imis</module>
   </modules>
 
   <profiles>
