--- a/custom_builds/60/samigo/samigo-10.x_features-backport/pom.xml
+++ b/custom_builds/60/samigo/samigo-10.x_features-backport/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sakaiproject</groupId>
         <artifactId>master</artifactId>
-        <version>10.2</version>
+        <version>10-SNAPSHOT</version>
 		<relativePath>../master/pom.xml</relativePath>
     </parent>
 	
