Updating changes for LS-144 from 2.9.x

--- a/custom_builds/112/login/sakai-10.x/login-tool/tool/src/bundle/auth.properties
+++ b/custom_builds/112/login/sakai-10.x/login-tool/tool/src/bundle/auth.properties
@@ -12,12 +12,12 @@ log.log    = Log in
 log.cancel = Cancel
 log.login  = Login
 log.logreq = Login Required
-log.pass   = password
+log.pass   = Password
 log.ple    = Please Login
 
 orpass = or password
 
-userid = user id
+userid = User id
 
 wel.wel = Welcome
 
@@ -34,5 +34,22 @@ log.tryagain = Unable to process that login, please try again.
 log.password.reset = Forgotten your password?
 log.choicereq = Select your authentication source
 
+#Properties for the password change addition. Please change the following property as well:
+#log.invalid = Login details are incorrect.
+log.renewpass = Your password has expired, please enter a new password.
+log.oldpass = Old Password
+log.newpass = New Password
+log.newpassconfirm = Confirm New Password
+log.pwchangereq = Password Change Required
 
+renewpass.empty = The required password fields are empty.
+renewpass.notequal = The passwords do no match
+renewpass.notnew = The new password cannot be the same as your old password.
+renewpass.notvalid = The new password does not meet the requirements.
 
+pass.requirements.info = The new password should meet the following requirements:
+pass.requirements.length = Has a length of at least {0} characters.
+pass.requirements.length_numbers = Contains at least {0} numbers.
+pass.requirements.length_letters_lower = Contains at least {0} lower case letters.
+pass.requirements.length_letters_upper = Contains at least {0} upper case letters.
+pass.requirements.oldnotvalid=Your old password is incorrect.
