--- a/custom_builds/137/distros/10.x/pom.xml
+++ b/custom_builds/137/distros/10.x/pom.xml
@@ -78,7 +78,9 @@
                 <module>jsf</module>
                 <module>kernel</module>
                 <module>lessonbuilder</module>
+                <!-- REQUIRES MANUAL PREAUTH JAR
                 <module>login</module>
+                -->
                 <module>mailarchive</module>
                 <module>mailsender</module>
                 <module>memory</module>
