--- a/custom_builds/124/distros/10.x/pom.xml
+++ b/custom_builds/124/distros/10.x/pom.xml
@@ -117,6 +117,7 @@
                 <module>web</module>
                 <module>webservices</module>
                 <module>evaluation</module>
+                <module>gradebook2</module>
                 <module>blogwow</module>
             </modules>
         </profile>
