LS-189 LS-188 kernel hack plus melete 2.9.9 modified

--- a/custom_builds/137/distros/10.x/pom.xml
+++ b/custom_builds/137/distros/10.x/pom.xml
@@ -116,6 +116,9 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>etudes-util</module>
+                <module>ltiContact</module>
+                <module>melete</module>
             </modules>
         </profile>
         <profile>
