--- a/custom_builds/141/distros/10.x/pom.xml
+++ b/custom_builds/141/distros/10.x/pom.xml
@@ -111,7 +111,7 @@
                 <module>taggable</module>
                 <module>textarea</module>
                 <module>tool</module>
-                <module>turnitin</module>
+                <module>turnitin/contentreview-impl</module>
                 <module>user</module>
                 <module>userauditservice</module>
                 <module>usermembership</module>
