dont deploy the gradebook hibernate jar

--- a/webservices/sakai-10.x/cxf/pom.xml
+++ b/webservices/sakai-10.x/cxf/pom.xml
@@ -170,6 +170,7 @@
     <dependency>
       <groupId>org.sakaiproject.edu-services.gradebook</groupId>
       <artifactId>gradebook-service-hibernate</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.sakaiproject.edu-services.gradebook</groupId>
