EST-6 LS-121 svn merge -c108854  ^/msub/longsight.com/custom_builds/7/edu-services/edu-services-1.1.x_custom

--- a/custom_builds/7/edu-services/edu-services-10.x/gradebook-service/sakai-pack/pom.xml
+++ b/custom_builds/7/edu-services/edu-services-10.x/gradebook-service/sakai-pack/pom.xml
@@ -15,6 +15,11 @@
     <deploy.target>components</deploy.target>
   </properties>
   <dependencies>
+			<dependency>
+					<groupId>org.sakaiproject.edu-services.gradebook</groupId>
+					<artifactId>gradebook-scheduler-jobs</artifactId>
+					<version>${project.version}</version>
+			</dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>gradebook-service-impl</artifactId>
