--- a/custom_builds/7/edu-services/edu-services-10.x/gradebook-service/pom.xml
+++ b/custom_builds/7/edu-services/edu-services-10.x/gradebook-service/pom.xml
@@ -17,6 +17,7 @@
         <module>api</module>
         <module>hibernate</module>
         <module>impl</module>
+        <module>scheduler-jobs</module>
         <module>sakai-pack</module>
     </modules>
 
