--- a/custom_builds/7/edu-services/edu-services-10.x/gradebook-service/scheduler-jobs/pom.xml
+++ b/custom_builds/7/edu-services/edu-services-10.x/gradebook-service/scheduler-jobs/pom.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0">
-  <modelVersion>4.0.0</modelVersion>
-  <name>Gradebook Quartz Scheduler Jobs</name>
-
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.sakaiproject.edu-services</groupId>
         <artifactId>edu-services</artifactId>
-        <version>10-SNAPSHOT</version><!-- ProjectVersion -->
+        <groupId>org.sakaiproject.edu-services</groupId>
+        <version>10-SNAPSHOT</version>
     </parent>
+  <modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.sakaiproject.edu-services.gradebook</groupId>
-	<artifactId>gradebook-scheduler-jobs</artifactId>
+  <artifactId>gradebook-scheduler-jobs</artifactId>
+  <name>Gradebook Quartz Scheduler Jobs</name>
+  <groupId>org.sakaiproject.edu-services.schedulerjobs</groupId>
 
   <packaging>jar</packaging>
     <properties>
@@ -33,10 +34,12 @@
      <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.quartz-scheduler</groupId>
       <artifactId>quartz</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.sakaiproject.kernel</groupId>
@@ -51,13 +54,6 @@
       <artifactId>gradebook-service-hibernate</artifactId>
       <scope>provided</scope>
     </dependency>
-
-    <!-- 
-    <dependency>
-      <groupId>org.sakaiproject.kernel</groupId>
-      <artifactId>sakai-kernel-api</artifactId>
-    </dependency>
-    -->
   </dependencies>
 </project>
 
