--- a/custom_builds/67/distros/10.x/pom.xml
+++ b/custom_builds/67/distros/10.x/pom.xml
@@ -83,9 +83,7 @@
                 <module>mailsender</module>
                 <module>memory</module>
                 <module>message</module>
-                <module>metaobj</module>
                 <module>msgcntr</module>
-                <module>osp</module>
                 <module>podcasts</module>
                 <module>polls</module>
                 <module>portal</module>
@@ -115,9 +113,17 @@
                 <module>userauditservice</module>
                 <module>usermembership</module>
                 <module>velocity</module>
-                <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
+
+                <module>blogwow</module>
+                <module>evaluation</module>
+                <module>content-review/contentreview-impl</module>
+                <module>adobeconnect</module>
+                <module>kaltura</module>
+                <module>itunesu-tool</module>
+                <module>wicket-for-scorm</module>
+                <module>scorm</module>
             </modules>
         </profile>
         <profile>
