--- a/custom_builds/144/distros/2.9.x/pom.xml
+++ b/custom_builds/144/distros/2.9.x/pom.xml
@@ -128,6 +128,8 @@
                 <module>velocity</module>
                 <module>warehouse</module>
                 <module>web</module>
+
+                <module>gradebook2</module>
             </modules>
         </profile>
         <profile>
