--- a/custom_builds/144/distros/2.9.x/pom.xml
+++ b/custom_builds/144/distros/2.9.x/pom.xml
@@ -100,13 +100,11 @@
                 <module>dav</module>
                 <module>gradebook</module>
                 <module>help</module>
-                <module>linktool</module>
                 <module>login</module>
                 <module>mailarchive</module>
                 <module>memory</module>
                 <module>message</module>
                 <module>metaobj</module>
-                <module>osp</module>
                 <module>podcasts</module>
                 <module>portal</module>
                 <module>postem</module>
@@ -126,9 +124,9 @@
                 <module>user</module>
                 <module>usermembership</module>
                 <module>velocity</module>
-                <module>warehouse</module>
                 <module>web</module>
-
+                <module>osp/xsltcharon/xsltcharon-portal/xsl-portal</module>
+                <module>scoring-service</module>
                 <module>gradebook2</module>
             </modules>
         </profile>
