Add jforum to build

--- a/custom_builds/144/distros/2.9.x/pom.xml
+++ b/custom_builds/144/distros/2.9.x/pom.xml
@@ -130,6 +130,7 @@
                 <module>etudes-util</module>
 		<module>melete</module>
 		<module>content-review/contentreview-impl</module>
+		<module>jforum</module>
 <!--
                 <module>osp/xsltcharon/xsltcharon-portal/xsl-portal</module>
                 <module>metaobj</module>
