Switching roster to roster2 in pom

--- a/sakai/branches/sakai-2.9.x/pom.xml
+++ b/sakai/branches/sakai-2.9.x/pom.xml
@@ -114,7 +114,7 @@
                 <module>providers</module>
                 <module>reference</module>
                 <module>rights</module>
-                <module>roster</module>
+                <module>roster2</module>
                 <module>rwiki</module>
                 <module>sections</module>
                 <module>site</module>
