Update Melete version

--- a/custom_builds/7/distros/10.x/pom.xml
+++ b/custom_builds/7/distros/10.x/pom.xml
@@ -63,7 +63,6 @@
                 <module>config</module>
                 <module>content</module>
                 <module>content-review</module>
-                <module>content-review/contentreview-impl</module>
                 <module>courier</module>
                 <module>dav</module>
                 <module>delegatedaccess</module>
@@ -118,9 +117,11 @@
 
                 <module>blogwow</module>
                 <module>etudes-util</module>
+                <module>ltiContact</module>
                 <module>evaluation</module>
                 <module>melete</module>
                 <module>bigbluebutton-sakai/bbb-tool</module>
+                <module>content-review/contentreview-impl</module>
             </modules>
         </profile>
         <profile>
