Moving sis integration to a profile

--- a/custom_builds/112/distros/sakai-10.x/pom.xml
+++ b/custom_builds/112/distros/sakai-10.x/pom.xml
@@ -122,10 +122,15 @@
                 <module>bigbluebutton-sakai/bbb-tool</module>
                 <module>batch-user-creation</module>
                 <module>clog</module>
-                <module>sis_integration</module>
                 <module>content-review/contentreview-impl</module>
                 
             </modules>
+        </profile>
+        <profile>
+          <id>sis_integration</id>
+          <modules>
+            <module>sis_integration</module>
+          </modules>
         </profile>
         <profile>
             <id>experimental</id>
