Fixing up 10.x build deployed today

--- a/custom_builds/3/distros/10.x/pom.xml
+++ b/custom_builds/3/distros/10.x/pom.xml
@@ -119,7 +119,7 @@
                 <module>adobeconnect</module>
                 <module>etudes-util</module>
                 <module>melete</module>
-                <module>bigbluebutton-sakai/bbb-tool</module>
+                <!--module>bigbluebutton-sakai/bbb-tool</module-->
             </modules>
         </profile>
         <profile>
