updating to latest revision of msgcntr

--- a/custom_builds/142/distros/10.x/pom.xml
+++ b/custom_builds/142/distros/10.x/pom.xml
@@ -122,7 +122,7 @@
                 <module>kaltura</module>
                 <module>gradebook2</module>
                 <module>messageservice</module>
-                <module>gradebook2export</module>
+                <module>gradebook2-export</module>
             </modules>
         </profile>
         <profile>
