VDL-355192 also add OSP

--- a/custom_builds/3/distros/10.x/pom.xml
+++ b/custom_builds/3/distros/10.x/pom.xml
@@ -121,6 +121,7 @@
                 <module>adobeconnect</module>
                 <module>etudes-util</module>
                 <module>melete</module>
+                <module>warehouse</module>
                 <!--module>bigbluebutton-sakai/bbb-tool</module-->
             </modules>
         </profile>
