ND-75 irubric integration

--- a/custom_builds/142/distros/10.x/pom.xml
+++ b/custom_builds/142/distros/10.x/pom.xml
@@ -120,6 +120,8 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>kaltura</module>
+                <module>irubric-core</module>
+                <module>irubric-tool</module>
                 <module>gradebook2</module>
             </modules>
         </profile>
