LS-97 Change text from "User Id" to "Email"

--- a/custom_builds/48/portal/portal-10.x_custom/portal-impl/impl/src/bundle/sitenav.properties
+++ b/custom_builds/48/portal/portal-10.x_custom/portal-impl/impl/src/bundle/sitenav.properties
@@ -6,7 +6,7 @@ log.login  = Login
 log.xlogin = Guest Login
 log.pass   = password:
 log.ple    = Please Login
-log.userid = user id:
+log.userid = Email:
 
 sit_log   = Logout
 sit_more  = More Sites
